Writing swagger docs
